--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,18 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import BuyersSellers from "../components/sections/buyers-sellers.astro";
+import Coaching from "../components/sections/coaching.astro";
+import MainLayout from "../layouts/main.astro";
+import Method from "../components/sections/method.astro";
+import Service from "../components/sections/service.astro";
+import Info from "../components/sections/info.astro";
 ---
 
-<Layout>
-	<Welcome />
-</Layout>
+<MainLayout>
+  <div class="mx-auto container">
+    <Service />
+    <BuyersSellers />
+    <Method />
+    <Coaching />
+    <Info />
+  </div>
+</MainLayout>
