--- a/src/components/sections/service.astro
+++ b/src/components/sections/service.astro
@@ -15,7 +15,7 @@ const section = (await sanity.fetch(serviceQuery, { lang: locale }))!;
     {section.title}
   </SectionTitle>
 
-  <div class="grid sm:grid-cols-3 gap-16 w-full items-center">
+  <div class="grid grid-cols-2 md:grid-cols-3 gap-16 w-full items-center">
     {
       section.features?.map((f) => (
         <div>
